# swe-mastery-24week

./: .gitignore  README.md  pyproject.toml  verify-precommit.ps1
algorithms/sorting/: __init__.py  bubble_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  selection_sort.py
tests/: test_sorting_algorithms.py
weekly-projects/week-01/: README.md
weekly-projects/week-01/algorithm_visualizer/src/: app.py
